--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lib-flexible": "^0.3.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
